tests/ui/explicit-tail-calls/ctfe-id-unlimited.return.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ctfe-id-unlimited.rs:17:42
   |
LL |             #[cfg(r#return)] _ => return inner(acc + 1, n - 1),
   |                                          ^^^^^^^^^^^^^^^^^^^^^ reached the configured maximum number of stack frames
   |
note: inside `inner`
  --> $DIR/ctfe-id-unlimited.rs:17:42
   |
LL |             #[cfg(r#return)] _ => return inner(acc + 1, n - 1),
   |                                          ^^^^^^^^^^^^^^^^^^^^^
note: [... 125 additional calls inside `inner` ...]
  --> $DIR/ctfe-id-unlimited.rs:17:42
   |
LL |             #[cfg(r#return)] _ => return inner(acc + 1, n - 1),
   |                                          ^^^^^^^^^^^^^^^^^^^^^
note: inside `rec_id`
  --> $DIR/ctfe-id-unlimited.rs:22:5
   |
LL |     inner(0, n)
   |     ^^^^^^^^^^^
note: inside `ID_ED`
  --> $DIR/ctfe-id-unlimited.rs:29:20
   |
LL | const ID_ED: u32 = rec_id(ORIGINAL);
   |                    ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
